fixed sidebuttons overlaping content

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 #home {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 90vh;
   align-items: center;
   justify-items: center;
   font-size: 1.6rem;
