--- a/src/components/SideButtons/RightButtons/RightButtons.css
+++ b/src/components/SideButtons/RightButtons/RightButtons.css
@@ -1,18 +1,8 @@
-.sideButtons-container {
-  display: flex;
-  justify-content: space-between;
+.rightButtons-container {
   position: fixed;
   bottom: 0px;
-  left: 0px;
-  width: 100%;
+  right: 0px;
   padding: 0 40px;
-}
-
-.buttons-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
 }
 
 .email-wrapper {
@@ -28,12 +18,6 @@
   font-size: 1rem;
   color: #eeee;
   letter-spacing: 0.1rem;
-}
-
-.bottom-line-left {
-  border: 1px solid #eeee;
-  width: 1px;
-  height: 155px;
 }
 
 .bottom-line-right {
